--- a/dog_community_app/templates/breed-info.html
+++ b/dog_community_app/templates/breed-info.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-6 d-flex flex-column justify-content-center">
                         <h5 class="card-title text-center mt-3 mb-3">{{breed.breed_name}}</h5>
-                        <p class="card-text text-center">Bred for: {{breed.bred_for}}</p>
+                        <p class="card-text text-center">Breed liked for: {{breed.bred_for}}</p>
                         <p class="card-text text-center">Life Span: {{breed.life_span}}</p>
                         <p class="card-text text-center">Orginated from: {{breed.origin}}</p>
                         <p class="card-text text-center">Temperament: {{breed.temperament}}</p>
