--- a/dog_community_app/templates/aboutus.html
+++ b/dog_community_app/templates/aboutus.html
@@ -4,7 +4,7 @@
 {% load static %}
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex align-items-center position-relative">
-    <img class="w-100 h-100"  src="{%static "assets/img/unsplash_hero_aboutus.png" %}" alt="Image">
+    <img class="w-100 h-100"  src="{%static "assets/img/xan-griffin-UCFgM_AojFg-unsplash.jpg" %}" alt="Image">
     <div class="carousel-caption">
         <div class="container">
             <div class="row justify-content-center">
