--- a/dog_community_app/templates/adoption.html
+++ b/dog_community_app/templates/adoption.html
@@ -4,7 +4,7 @@
 {% load static %}
 <div id="adoption">
     <section id="hero" class="d-flex align-items-center position-relative">
-        <img class="hero-img"  src="{%static "assets/img/unsplash_hero_aboutus.png" %}" alt="Image">
+        <img class="hero-img"  src="{%static "assets/img/rhaul-v-alva-jCM48W7y6Y8-unsplash.jpg" %}" alt="Image">
         <div class="carousel-caption">
             <div class="container">
                 <div class="row">
@@ -90,6 +90,11 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
+                                    <datalist id="dogs_list" >
+                                        {% for dog in all_dogs %}
+                                            <option value="{{dog.dog_name}}"/>
+                                        {% endfor %}
+                                    </datalist>
                                     {% for field in adoption_dog_form%}
                                         {{field}}
                                         {{field.errors}}
@@ -99,11 +104,6 @@
                                         {{field.errors}}
                                     {% endfor%}
                                     <input type="hidden" name="action-adopt" value="action-adopt"/>
-                                    {% comment %} <div class="mb-3"><input list="dog_list" class="form-control text-center" style="width: 160px;" type="text" id="dog_name" name="dog_name" placeholder="Enter dog name"/></div>
-                                    <div class="mb-3"><input class="form-control" type="text" id="name" name="name" placeholder="Your Name" style="margin-top: 7px;padding-bottom: 9px;margin-bottom: 16px;"></div>
-                                    <div class="mb-3"><input class="form-control" type="tel" name="email" placeholder="Email Address"></div>
-                                    <div class="mb-3"><input class="form-control" type="tel" name="phn" placeholder="Contact Number"></div>
-                                    <div class="mb-3"><input class="form-control" type="file"></div> {% endcomment %}
                                 </div>
                                 <div class="modal-footer d-flex justify-content-center">
                                     <button class="btn btn-primary d-block w-50" type="submit">Submit</button>
