--- a/dog_community_app/templates/base.html
+++ b/dog_community_app/templates/base.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
     <head>
+        {% load static %}
         {% comment %} <title>{% block title %}{% endblock %}</title> {% endcomment %}
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap" rel="stylesheet"> 
-
+        <!-- Favicon icon -->
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static '"assets/img/logo.png"' %}">
         <!-- Icon Font Stylesheet -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -43,14 +45,14 @@
                 </div>
             </div>
 
-            <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+            <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.3s">
                 <a href="{% url 'home' %}" class="navbar-brand ms-4 ms-lg-0">
                     <img width="70%" src="{% static "assets/img/logo.png" %}" alt="brand-logo"/>
                 </a>
-                <button type="button" class="navbar-toggler me-4" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <button type="button" class="navbar-toggler me-3" data-toggle="collapse" data-target=".navbar-custom" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="collapse navbar-collapse navbar-custom" id="navbarNav">
                     <ul class="navbar-nav ms-auto p-4 p-lg-0">
                         <li class="nav-item"> 
                             <a href="{% url 'home' %}"  class="nav-link {% if '/home' in request.path %}active{% endif %}">Home <span class="sr-only">(current)</span></a>
@@ -78,8 +80,8 @@
                             <a href="{% url 'aboutus' %}" class="nav-link {% if '/aboutus' in request.path %}active{% endif %}">About</a>
                         </li>
                     </ul>
-                    <div class="d-none d-lg-flex ms-2">
-                        <a class="btn btn-outline-primary py-2 px-3" href="">
+                    <div class="d-none d-lg-flex ms-2 justify-content-center">
+                        <a href="{% url 'adoption' %}" class="btn btn-outline-primary py-2 px-3 animated slideInDown">
                             Adopt Now
                             <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                 <i class="fa fa-arrow-right"></i>
@@ -157,6 +159,10 @@
         </div>
         <!-- Footer End -->
         <!-- JavaScript Libraries -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
