--- a/dog_community_app/templates/meetup.html
+++ b/dog_community_app/templates/meetup.html
@@ -4,7 +4,7 @@
 {% load static %}
 <div id="meetup">
     <section id="hero" class="d-flex align-items-center position-relative">
-        <img class="hero-img"  src="{%static "assets/img/unsplash_hero_aboutus.png" %}" alt="Image">
+        <img class="hero-img"  src="{%static "assets/img/delaney-dawson-BXs8SjVelKs-unsplash.jpg" %}" alt="Image">
         <div class="carousel-caption">
             <div class="container">
                 <div class="row">
