sqlite migration success

--- a/dog_community_app/templates/base.html
+++ b/dog_community_app/templates/base.html
@@ -123,8 +123,8 @@
                         <a class="btn btn-link" href="{% url 'aboutus' %}">About Us</a>
                         <a class="btn btn-link" href="{% url 'home' %}#contactus">Contact Us</a>
                         <a class="btn btn-link" href="{% url 'breed-info' %}">Breed Info</a>
-                        <a class="btn btn-link" href="/report_dogs/missing">Missing dogs</a>
-                        <a class="btn btn-link" href="/report_dogs/stray">Stray dogs</a>
+                        <a class="btn btn-link" href="/report-dogs/missing">Missing dogs</a>
+                        <a class="btn btn-link" href="/report-dogs/stray">Stray dogs</a>
                         <a class="btn btn-link" href="{% url 'meetup' %}">Meetup</a>
                         <a class="btn btn-link" href="{% url 'adoption' %}">Adoption</a>
                         
@@ -148,7 +148,7 @@
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                             &copy; <a href="#">Dog Lovers</a>
                         </div>
-                        <div class="col-md-6 text-center text-md-end">
+                        <div class="col-md-6 text-center text-md-end d-none">
                             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                             Designed By <a href="https://htmlcodex.com">HTML Codex</a>
                             <a href="https://www.freepik.com/free-vector/colorful-dog-cat-paw-prints-pattern-background_13124485.htm#query=dog%20background&position=1&from_view=keyword">Image by starline</a> on Freepik
