--- a/dog_community_app/templates/report_dogs.html
+++ b/dog_community_app/templates/report_dogs.html
@@ -52,7 +52,7 @@
                             <div class="card-body mt-1 mb-2">
                                 <p class="card-text text-center mt-2 mx-2"><b>Age</b>: {{dog.dog_age}} years</p>
                                 <p class="card-text text-center mt-2 mx-2"><b>Color</b>: {{dog.dog_color}}</p>      
-                                {% if dog.found_at %}<p class="card-text text-center mt-2 mx-2"><b>Found at</b>: {{dog.found_at}}</p>{% endif %}                    
+                                {% if dog.found_at %}<p class="card-text text-center mt-2 mx-2"><b>Last known location</b>: {{dog.found_at}}</p>{% endif %}                    
                             </div>
                         </div>   
                     </div>
