--- a/dog_community_app/templates/base.html
+++ b/dog_community_app/templates/base.html
@@ -33,8 +33,8 @@
         <div class="container-fluid fixed-top px-0 wow fadeIn bg-initial" data-wow-delay="0.1s">
             <div class="top-bar text-white-50 row gx-0 align-items-center d-none d-lg-flex">
                 <div class="col-lg-6 px-5 text-start">
-                    <small><i class="fa fa-map-marker-alt me-2"></i>123 Street, Ottawa, Canada</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-2"></i>info@example.com</small>
+                    <small><i class="fa fa-map-marker-alt me-2"></i>20 Knoxdale Crescent, K17 A5T</small>
+                    <small class="ms-4"><i class="fa fa-envelope me-2"></i>cfdlovers@cfdl.ca</small>
                 </div>
                 <div class="col-lg-6 px-5 text-end">
                     <small>Follow us:</small>
@@ -104,7 +104,7 @@
                             <h1 class="fw-bold mb-4 custom-primary-color" >Dog <span class="text-white">Lovers</span></h1>
                         </a>
                         
-                        <p>Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita</p>
+                        <p>A community page where you can adopt, get breed information, go on a meetup and report a missing or stray dogs.</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-square me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -115,8 +115,8 @@
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-light mb-4">Address</h5>
                         <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, Ottawa, Canada</p>
-                        <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                        <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                        <p><i class="fa fa-phone-alt me-3"></i>+1 555 454 1345</p>
+                        <p><i class="fa fa-envelope me-3"></i>20 Knoxdale Crescent, K17 A5T</p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-light mb-4">Quick Links</h5>
@@ -131,7 +131,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-light mb-4">Newsletter</h5>
-                        <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                        <p>Subscribe to our weekly Newsletter</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <form class="w-100" method="post" enctype="multipart/form-data">
                                 {% csrf_token %}
