--- a/dog_community_app/templates/adoption.html
+++ b/dog_community_app/templates/adoption.html
@@ -9,7 +9,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 pt-5 mx-auto">
-                        <h1 class="display-4 text-white mb-3 animated slideInDown">Adobt your perfect dog</h1>
+                        <h1 class="display-4 text-white mb-3 animated slideInDown">Adopt your perfect dog</h1>
                         <p class="fs-5 text-white-50 mb-5 animated slideInDown">Search your adoptable dog from our NGO or from rescue</p>
                         <div class="d-flex justify-content-center align-content-center">
                             {% csrf_token %}
