--- a/dog_community_app/templates/breed-info.html
+++ b/dog_community_app/templates/breed-info.html
@@ -4,7 +4,7 @@
 {% load static %}
 <div id="breed-info">
     <section id="hero" class="d-flex align-items-center position-relative">
-        <img class="hero-img"  src="{%static "assets/img/alvan-nee-T-0EW-SEbsE-unsplash.png" %}" alt="Image">
+        <img class="hero-img"  src="{%static "assets/img/alvan-nee-T-0EW-SEbsE-unsplash.jpg" %}" alt="Image">
         <div class="carousel-caption">
             <div class="container">
                 <div class="row">
