--- a/dog_community_app/templates/success.html
+++ b/dog_community_app/templates/success.html
@@ -7,6 +7,7 @@
         <i class="checkmark">✓</i>
     </div>
     <h1 class="display-3">Thank You!</h1>
+    <p class="lead">{% if action == 'meetup'%}Your meetup is confirmed{% elif action == 'report-missing' %}You have successfully submitted the missing dog details{% elif action == 'adoption' %}You have successfully submitted the adoption form{% else %}You have successfully submitted the missing dog details{% endif %}
     <p class="lead"><strong>Please check your email</strong> for the details. Hope to see you soon!</p>
     <p>
         Having trouble? <a href="{% url 'home' %}#contact-us">Contact us</a>
